@@ -26,6 +26,9 @@ Changelog for NICOS 2
   - The "center()" and "checkoffset()" user commands now can take an "ycol"
     keyword that determines which data column is used for fitting.
 
+  - Added "calpos()", "pos()" and "rp()" commands for triple-axis
+    spectrometers.
+
 **Release 2.0.1**
 
   - In ImageStorage, make sure the data file isn't overwritten unless
